--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
   "homepage": "https://github.com/sonnylazuardi/react-native-credit-card#readme",
   "dependencies": {
     "payment": "^2.0.3",
-    "react-native-flip-card": "^3.3.0"
+    "react-native-flip-card": "^3.x"
   }
 }
